# magang-IRIS

modul-1/: integration.cpp  number-conversion.cpp  prime-al.cpp  prime.cpp  root1.cpp  tempCodeRunnerFile.cpp  turunan-al.cpp  turunan.cpp  turunkan.cpp
modul-2/: CMakeLists.txt
modul-2/src/: main.cpp  tugas-1.cpp  tugas-2.cpp  tugas-3.cpp
